gRPC Demo update solution

--- a/Day05.gRPC/grpcClient/grpcClient.csproj
+++ b/Day05.gRPC/grpcClient/grpcClient.csproj
@@ -10,6 +10,7 @@
 
 <ItemGroup>
   <Protobuf Include="greet.proto" GrpcServices="Client" />
+  <Protobuf Include="message.proto" GrpcServices="Client" />
 </ItemGroup>
 
 
